# nora3

./: .gitignore  Makefile  README.md  expected_results.json  pyproject.toml
nora3/: __init__.py  __main__.py  asm.py  asts.py  builtin_types.py  common.py  lex.py  parse.py  tacky.py  tok.py
scripts/: compare-test-coverage.py  compare-test-files.sh
tests/: test_lex.py  test_parse.py  test_semantics.py
tests/chapter_08/valid/extra_credit/: loop_in_switch.c
