[project]
name = "nora3"
version = "0.1.0"
description = "C-compiler based on Nora Sandler's book"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "mypy>=1.16.0",
    "pip>=25.1.1",
    "pytest>=8.4.0",
    "coverage>=7.9.1",
    "pytest-cov>=6.2.1",
    "ipython>=9.12.0",
]

[tool.ruff]
line-length = 119

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
nora3 = { workspace = true }
